--- a/vk_stats/interface.kv
+++ b/vk_stats/interface.kv
@@ -257,9 +257,13 @@
     IconButton:
         id: relogin
         size_hint_y: 0.25
-        size_hint_x: 0.325
+        size_hint_x: 0.3
         pos_hint: {'right': 1}
         text: root.relogin_text
+        text_size: self.size
+        valign: 'middle'
+        halign: 'right'
+        padding: [10, 0]
         image: dir + '/images/48/login.png'
 <About>:
     link: link
